<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrzelicznikWalut</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pomoc">Pomoc</string>
    <string name="autor">Autor</string>
    <string name="powitalne">Przelicz walutę</string>
    <string name="waluta_we">Waluta wejściowa</string>
    <string name="waluta_wy">Waluta wyjściowa</string>
    <string name="wpisz">Wpisz wartość</string>
    <string name="przelicz">Przelicz walutę!</string>
    <string name="zmien">Zmień kurs walut</string>
    
</resources>
